--- a/app/src/main/res/briefing_configurator/layout/briefing_configurator.xml
+++ b/app/src/main/res/briefing_configurator/layout/briefing_configurator.xml
@@ -66,7 +66,7 @@
             app:layout_constraintBottom_toTopOf="@+id/plenary"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
+        <com.stario.launcher.ui.keyboard.extract.ExtractEditText
             android:id="@+id/query"
             android:layout_width="match_parent"
             android:layout_height="60dp"
