--- a/app/src/main/res/drawer_interactions/layout/customize_pop_up.xml
+++ b/app/src/main/res/drawer_interactions/layout/customize_pop_up.xml
@@ -46,7 +46,7 @@
                     android:letterSpacing="-0.03"
                     android:lines="1"
                     android:maxLines="1"
-                    android:text="@string/label"
+                    android:text="@string/application_label"
                     android:textColor="?attr/colorOnSurface"
                     android:textSize="20sp" />
 
@@ -61,7 +61,7 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-                <EditText
+                <com.stario.launcher.ui.keyboard.extract.ExtractEditText
                     android:id="@+id/label"
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
@@ -89,6 +89,36 @@
                     android:padding="13dp"
                     android:src="@drawable/ic_reset"
                     app:carbon_cornerRadius="9999dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/warning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:gravity="center_vertical"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_warning" />
+
+                <Space
+                    android:layout_width="25dp"
+                    android:layout_height="0px" />
+
+                <TextView
+                    android:layout_width="0px"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/dm_sans_regular"
+                    android:text="@string/application_label_warning"
+                    android:textColor="?attr/colorError"
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
