--- a/app/src/main/res/drawer/layout/folder.xml
+++ b/app/src/main/res/drawer/layout/folder.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -16,15 +15,16 @@
   ~ along with this program. If not, see <http://www.gnu.org/licenses/>
   -->
 
-<com.stario.launcher.ui.common.LimitingTranslationConstraint xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clipChildren="false"
     android:clipToPadding="false"
     android:paddingLeft="10dp"
+    android:paddingTop="5dp"
     android:paddingRight="10dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="5dp">
 
     <com.stario.launcher.ui.recyclers.ClickableRecyclerView
         android:id="@+id/items"
@@ -54,4 +54,4 @@
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@id/items" />
 
-</com.stario.launcher.ui.common.LimitingTranslationConstraint>
+</androidx.constraintlayout.widget.ConstraintLayout>
