--- a/app/src/main/res/drawer/layout/drawer_folder.xml
+++ b/app/src/main/res/drawer/layout/drawer_folder.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2025 Răzvan Albu
   ~
   ~ This program is free software: you can redistribute it and/or modify
@@ -22,6 +21,16 @@
     android:layout_height="wrap_content"
     android:layout_gravity="bottom">
 
+    <com.stario.launcher.ui.recyclers.overscroll.OverScrollRecyclerView
+        android:id="@+id/drawer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:nestedScrollingEnabled="true"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
@@ -33,15 +42,5 @@
         android:lines="1"
         android:textColor="?attr/colorOnSurface"
         android:textSize="30sp" />
-
-    <com.stario.launcher.ui.recyclers.overscroll.OverScrollRecyclerView
-        android:id="@+id/drawer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:nestedScrollingEnabled="true"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp" />
 
 </RelativeLayout>
