--- a/app/src/main/res/settings_dialogs/layout/pop_up_licenses.xml
+++ b/app/src/main/res/settings_dialogs/layout/pop_up_licenses.xml
@@ -26,58 +26,20 @@
     <com.stario.launcher.ui.common.FadingEdgeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
         app:fel_edge="bottom|top"
         app:fel_size_bottom="20dp"
         app:fel_size_top="20dp">
 
-        <androidx.core.widget.NestedScrollView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/licenses"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="10dp"
             android:clipToPadding="false"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="30dp"
-                android:paddingEnd="30dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/dm_sans_regular"
-                    android:paddingBottom="10dp"
-                    android:text="@string/main_dependencies"
-                    android:textColor="?attr/colorSecondary"
-                    android:textSize="16sp" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/licenses"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:overScrollMode="never" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/dm_sans_regular"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="17dp"
-                    android:text="@string/all_dependencies"
-                    android:textColor="?attr/colorSecondary"
-                    android:textSize="16sp" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/oss_licenses"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:overScrollMode="never" />
-
-            </LinearLayout>
-
-        </androidx.core.widget.NestedScrollView>
+            android:paddingBottom="10dp"
+            android:overScrollMode="never" />
 
     </com.stario.launcher.ui.common.FadingEdgeLayout>
 
